<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.example.submissionmade.movie.MovieFragment"
        android:label="@string/title_movie"
        tools:layout="@layout/fragment_item" />

    <fragment
        android:id="@+id/navigation_tvshow"
        android:name="com.example.submissionmade.tvshow.TvShowFragment"
        android:label="@string/title_tvshow"
        tools:layout="@layout/fragment_item" />

    <activity
        android:id="@+id/navigation_favorite"
        android:name="com.example.submissionmade.favorite.FavoriteActivity"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>